[package]
name = "lab06"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.13", features = ["derive"] }
serde = "1.0.147"
postcard = { version = "1.0.2", features = ["alloc"] }
